--- a/src/main/resources/templates/addProject.html
+++ b/src/main/resources/templates/addProject.html
@@ -69,12 +69,6 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="projeninAmaci" class="col-sm-2 control-label">Projenin Amacı</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="projeninAmaci" name="projeninAmaci" placeholder="">
-            </div>
-        </div>
-        <div class="form-group">
             <label for="projeDurumu" class="col-sm-2 control-label">Proje Durumu</label>
             <select class="form-control" id="projeDurumu" name="projeDurumu" style="max-width: 200px; margin-left: 10px">
                 <option>Tamamlandı</option>
@@ -82,7 +76,17 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="kurumIciProje" class="col-sm-2 control-label">Kurum İçi Proje</label>
+            <label for="yil" class="col-sm-2 control-label">Yıl</label>
+            <select class="form-control" id="yil" name="yil" style="max-width: 576px; margin: 0 auto">
+                <option>2021</option>
+                <option>2020</option>
+                <option>2019</option>
+                <option>2018</option>
+                <option>2017</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="kurumIciProje" class="col-sm-2 control-label">Kurum İçi Proje(BAP)</label>
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="true" id="kurumIciProje">
                 <label class="form-check-label" for="kurumIciProje">
@@ -90,10 +94,10 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="uluslararasiProje" class="col-sm-2 control-label">Uluslararası Proje</label>
+            <label for="uluslararasi" class="col-sm-2 control-label">Uluslararası Proje</label>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="uluslararasiProje">
-                <label class="form-check-label" for="uluslararasiProje">
+                <input class="form-check-input" type="checkbox" value="" id="uluslararasi">
+                <label class="form-check-label" for="uluslararasi">
                 </label>
             </div>
         </div>
@@ -114,7 +118,7 @@
         <div class="form-group">
             <label for="projeButcesi" class="col-sm-2 control-label">Proje Bütçesi</label>
             <div class="col-sm-10">
-                <input type="number" class="form-control" id="projeButcesi" name="projeButcesi" placeholder="">
+                <input type="text" class="form-control" id="projeButcesi" name="projeButcesi" placeholder="">
             </div>
         </div>
         <div class="form-group">
@@ -134,25 +138,25 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="disDestekliProje" class="col-sm-2 control-label">Dış Destekli Proje</label>
+            <label for="disDestekli" class="col-sm-2 control-label">Dış Destekli Proje</label>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="disDestekliProje">
-                <label class="form-check-label" for="disDestekliProje">
+                <input class="form-check-input" type="checkbox" value="" id="disDestekli">
+                <label class="form-check-label" for="disDestekli">
                 </label>
             </div>
         </div>
         <div class="form-group">
-            <label for="uluslararasiIsbirlikliProje" class="col-sm-2 control-label">Uluslararası İşbirlikli Proje</label>
+            <label for="uluslararasiIsbirlikli" class="col-sm-2 control-label">Uluslararası İşbirlikli Proje</label>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="uluslararasiIsbirlikliProje">
-                <label class="form-check-label" for="uluslararasiIsbirlikliProje">
+                <input class="form-check-input" type="checkbox" value="" id="uluslararasiIsbirlikli">
+                <label class="form-check-label" for="uluslararasiIsbirlikli">
                 </label>
             </div>
         </div>
         <div class="form-group">
             <label for="arastirmaciSayisi" class="col-sm-2 control-label">Araştırmacı Sayısı</label>
             <div class="col-sm-10">
-                <input type="number" class="form-control" id="arastirmaciSayisi" name="arastirmaciSayisi" placeholder="">
+                <input type="text" class="form-control" id="arastirmaciSayisi" name="arastirmaciSayisi" placeholder="">
             </div>
         </div>
         <div class="form-group">
